syntax = "proto3";

import "const.proto";

package engine;

service CalendarApi {
    // - POST /calendar
    rpc Create(Calendar) returns (Calendar) {}
    // -GET /calendar
    rpc List(ListRequest) returns (ListCalendar) {}
    // -GET /calendar/:id
    rpc Get(ItemRequest) returns (Calendar) {}
    // -PUT /calendar/:id
    rpc Update(Calendar) returns (Calendar) {}
    // -DELETE /calendar/:id
    rpc Remove(ItemRequest) returns (Calendar) {}

    // -GET /calendar/timezones
    rpc GetTimezones(ListRequest) returns (ListTimezoneResponse) {}

    // -GET /calendar/:id/accept
    rpc GetAcceptOfDay(AcceptOfDayReqeust) returns (ListAcceptOfDay) {}
}

message ListCalendar {
    repeated Calendar items = 1;
}

message Calendar {
    int64 id = 1;
    int64 domain_id = 2;
    int64 created_at = 3;
    Lookup created_by = 4;
    int64 updated_at = 5;
    Lookup updated_by = 6;

    string name = 7;
    int64 start = 8;
    int64 finish = 9;
    Lookup timezone = 10;
    string description = 11;
}

message ListTimezoneResponse {
    repeated Timezone items = 1;
}

message Timezone {
    int64 id = 1;
    string name = 2;
    string offset = 3;
}

message AcceptOfDay {
    int64 id = 1;
    int32 week_day = 3;
    int32 start_time_of_day = 4;
    int32 end_time_of_day = 5;
}

message AcceptOfDayReqeust {
    int64 calendar_id = 1;
}

message ListAcceptOfDay {
    repeated AcceptOfDay items = 1;
}
